fix(ui): remove extra padding for unread threads

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -104,8 +104,6 @@
 		font-weight: bold;
 		color: $fg-200;
 		position: relative;
-		padding: 4px;
-		cursor: pointer;
 
 		&::before {
 			position: absolute;
